--- a/requirements.txt
+++ b/requirements.txt
@@ -50,7 +50,7 @@ opencv-contrib-python==4.9.0.80
 opt-einsum==3.3.0
 packaging==23.2
 pillow==10.2.0
-pip==23.3.2
+pip
 promise==2.3
 protobuf==3.20.3
 psutil==5.9.8
