--- a/config/cvat_config.json
+++ b/config/cvat_config.json
@@ -2,10 +2,10 @@
   "perspective_info": {
     "matrix_path": "config/perspective_matrix.pkl",
       "cutoffs": [
-        450,
-        850,
-        450,
-        850
+        725,
+        1369,
+        725,
+        1369
       ]
   },
   "model_info": {
@@ -19,6 +19,6 @@
     "y_anchors": 32,
     "max_lane_count": 3,
     "checkpoint_path": "tmp/perspective-checkpoint4/",
-    "tflite_model_name": "model_cvat4.tflite"
+    "tflite_model_name": "model_cvat4tailorf32_edgetpu.tflite"
   }
 }
