--- a/config/cvat_config.json
+++ b/config/cvat_config.json
@@ -2,10 +2,10 @@
   "perspective_info": {
     "matrix_path": "config/perspective_matrix.pkl",
       "cutoffs": [
-        725,
-        1369,
-        725,
-        1369
+        128,
+        553,
+        0,
+        415
       ]
   },
   "model_info": {
@@ -19,6 +19,6 @@
     "y_anchors": 32,
     "max_lane_count": 3,
     "checkpoint_path": "tmp/perspective-checkpoint4/",
-    "tflite_model_name": "model_cvat4tailorf32_edgetpu.tflite"
+    "tflite_model_name": "model_new_cv_edgetpu.tflite"
   }
 }
